Dig Dug Website
Completed the second lab exercise for the dig dug web page

--- a/game/big/pic1.html
+++ b/game/big/pic1.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Dig Dug Title Screen</title>
+        <link rel="stylesheet" href="../styles/stylesheet.css">
     </head>
     <body>
         <img src="../images/title_screen.jpg" alt="Large image of the Dig Dug title screen"><br>
