--- a/game/big/pic1.html
+++ b/game/big/pic1.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="../styles/stylesheet.css">
     </head>
     <body>
+    <main>
         <img src="../images/title_screen.jpg" alt="Large image of the Dig Dug title screen"><br>
         <a href="../index.html">Back to Game Page</a><br>
         <a href="../index.html#source">View Game Page Source</a>
+    </main>
     </body>
 </html>
