Tetris Grid Lab Exercise
Adding finished grid lab, updating the name of the previous tetris folder to better match, and updating the home page for both labs

--- a/235 Home/index.html
+++ b/235 Home/index.html
@@ -12,8 +12,8 @@
         <h1>Nathan Wildofsky's 235 Page</h1>
     </header>
     <main>
-        <h2>About</h2>
         <section id="bio">
+        <h2>About</h2>
         <img id="pic" src="images/profile.jpeg" alt="headshot profile">
         <p>
             Hello! My name is Nathan Wildofsky and I'm a second year GDD student here at RIT. I'm very interested in
@@ -26,15 +26,26 @@
             either pursue later or keep with me as general knowledge.
         </p>
         </section>
-        <h2>Projects</h2>
         <section>
-            <a href="https://people.rit.edu/nsw7227/235/error/m">Project 1</a><br>
-            <a href="https://people.rit.edu/nsw7227/235/error/m">Project 2</a><br>
-            <a href="https://people.rit.edu/nsw7227/235/error/m">Project 3</a><br>
+            <h2>Projects</h2>
+        <div>
+            <a href="https://people.rit.edu/nsw7227/235/error/m" class="links">Project 1</a>
+            <a href="https://people.rit.edu/nsw7227/235/error/m" class="links">Project 2</a>
+            <a href="https://people.rit.edu/nsw7227/235/error/m" class="links">Project 3</a>
+        </div>
+        </section>        
+        <section>
+            <h2>Homeworks & Lab Exercises</h2>
+            <div>
+                <a href="https://people.rit.edu/nsw7227/235/game/" class="links">Dig Dug Page</a>
+                <a href="https://people.rit.edu/nsw7227/235/KOTOR/" class="links">Star Wars KOTOR Page</a>
+                <a href="https://people.rit.edu/nsw7227/235/tetris-flex/tetris.html" class="links">Tetris Flex Lab</a>
+                <a href="https://people.rit.edu/nsw7227/235/tetris-grid/tetris-grid.html" class="links">Tetris Grid Lab</a>
+            </div>
         </section>
     </main>
     <footer>
-        <a href="https://github.com/Superflare/IGME-235-Intro-to-Game-Web-Tech"><img src="images/github.logo.png" alt="class github link"></a>
+        <a href="https://github.com/Superflare/IGME-235-Intro-to-Game-Web-Tech"><img src="images/github.logo.png" alt="class github link" class="icon"></a>
     </footer>
 </body>
 
