--- a/design-to-spec/index.html
+++ b/design-to-spec/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design to Spec</title>
+    <title>Minecraft: Trees & Wood</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 
@@ -13,7 +13,7 @@
         <header class="grid">
             <div class="flex" id="header-content">
                 <h1>Trees & Wood</h1>
-                <object id="icon"></object>
+                <object id="icon" type="image/svg+xml" data="images/axe.svg" width="60" height="40"></object>
                 <p>
                     IGME 235<br>
                     Nathan Wildofsky
