Project 1 and Web-Apps-Labs 1-3
Finalized project 1 and added web labs to the repo

--- a/235 Home/index.html
+++ b/235 Home/index.html
@@ -29,9 +29,9 @@
         <section>
             <h2>Projects</h2>
         <div>
-            <a href="https://people.rit.edu/nsw7227/235/error/m" class="links">Project 1</a>
-            <a href="https://people.rit.edu/nsw7227/235/error/m" class="links">Project 2</a>
-            <a href="https://people.rit.edu/nsw7227/235/error/m" class="links">Project 3</a>
+            <a href="https://people.rit.edu/nsw7227/235/project1" class="links">Project 1</a>
+            <a href="#" class="links">Project 2</a>
+            <a href="#" class="links">Project 3</a>
         </div>
         </section>        
         <section>
