--- a/web-apps-labs/web-apps-lab-5.html
+++ b/web-apps-labs/web-apps-lab-5.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8" />
 	<title>Web Apps-6</title>
 	<style>
-		body{
-			font-family:sans-serif;
+		body {
+			font-family: sans-serif;
 		}
-		#colorform{
-			background-color:#dfecdf;
+
+		#colorform {
+			background-color: #dfecdf;
 			color: #111;
-			padding:1em;width:400px;
+			padding: 1em;
+			width: 400px;
 		}
-		#colorform p#info{
-			background-color:white;
+
+		#colorform p#info {
+			background-color: white;
 			color: black;
-			width:300px;
-			height:100px;
-			padding:.5em;
+			width: 300px;
+			height: 100px;
+			padding: .5em;
 		}
-		
-		#colorform legend{ 
-			font-weight:bold;
-			font-size:1.2em;
+
+		#colorform legend {
+			font-weight: bold;
+			font-size: 1.2em;
 		}
 	</style>
 </head>
+
 <body>
 
-<div id="colorform">
-	<legend>Choose your favorite color!</legend>
-	<p><input type="radio" name="colorGroup" id="colorGroupRed" value="red" /> Red</p>
-	<p><input type="radio" name="colorGroup" id="colorGroupGreen" value="green" /> Green</p>
-	<p><input type="radio" name="colorGroup" id="colorGroupBlue" value="blue" /> Blue</p>
-	<p><button id="colorButton" type="button">Submit</button></p>
-	<p id="info"></p>
-</div>
+	<div id="colorform">
+		<legend>Choose your favorite color!</legend>
+		<p><input type="radio" name="colorGroup" id="colorGroupRed" value="red" /> Red</p>
+		<p><input type="radio" name="colorGroup" id="colorGroupGreen" value="green" /> Green</p>
+		<p><input type="radio" name="colorGroup" id="colorGroupBlue" value="blue" /> Blue</p>
+		<p><button id="colorButton" type="button">Submit</button></p>
+		<p id="info"></p>
+	</div>
 
-<script>
-/* Write your code here! */
-let legend = document.querySelector("legend");
-let colorGroup = document.querySelectorAll("input[name=colorGroup]");
-let submit = document.querySelector("#colorButton");
-let info = document.querySelector("#info");
+	<script>
+		/* Write your code here! */
+		let legend = document.querySelector("legend");
+		let colorGroup = document.querySelectorAll("input[name=colorGroup]");
+		let submit = document.querySelector("#colorButton");
+		let info = document.querySelector("#info");
 
-colorGroup.forEach(color => {
-    color.addEventListener("change", function(e) {info.innerHTML = "You have selected " + e.target.value + "!"});
-})
+		colorGroup.forEach(color => {
+			color.addEventListener("change", function (e) {
+				info.innerHTML = "You have selected " + e.target.value + "!";
+				legend.style.color = "black";
+			});
+		})
 
-submit.addEventListener("click", function(e) {
-    for (let color of colorGroup)
-    {
-        if (color.checked)
-        {
-            info.innerHTML = "Your FINAL CHOICE is " + color.value + "!";
-            legend.style.color = color.value;
-        }
-    }
-})
-</script>
+		submit.addEventListener("click", function (e) {
+			for (color of colorGroup) {
+				if (color.checked) {
+					info.innerHTML = "Your FINAL CHOICE is " + color.value + "!";
+					legend.style.color = color.value;
+				}
+			}
+		})
+	</script>
 </body>
+
 </html>
