--- a/235 Home/index.html
+++ b/235 Home/index.html
@@ -41,6 +41,7 @@
                 <a href="https://people.rit.edu/nsw7227/235/KOTOR/" class="links">Star Wars KOTOR Page</a>
                 <a href="https://people.rit.edu/nsw7227/235/tetris-flex/tetris.html" class="links">Tetris Flex Lab</a>
                 <a href="https://people.rit.edu/nsw7227/235/tetris-grid/tetris-grid.html" class="links">Tetris Grid Lab</a>
+                <a href="https://people.rit.edu/nsw7227/235/random-phrases/random-phrases.html" class="links">Random Phrases</a>
             </div>
         </section>
     </main>
